testsuite/escript/classes/fail-scopes-var-and-func.err
fail-scopes-var-and-func.src:4:9: error: Cannot define a variable with the same name as function 'Animal::foo'.