testsuite/escript/classes/fail-scopes-var-and-func.src
// A class cannot have a variable and function with the same name.

class Animal()
  var foo := "foo";

  function foo()
  endfunction
endclass

// Reference the class
Animal::foo();
